create the calculator HTML display

--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
         <script src="" defer></script>
     </head>
     <body>
-        
+        <div id="calcularor" class="calculator">
+            <div id="scream" class="scream"></div>
+            <div id="firstLine">
+                <button id="" class="">C</button>
+                <button id="" class="">⟵</button>
+                <button id="" class="">/</button>
+            </div>
+            <div id="secondLine">
+                <button id="" class="">7</button>
+                <button id="" class="">8</button>
+                <button id="" class="">9</button>
+                <button id="" class="">*</button>
+            </div>
+            <div id="thirdLine">
+                <button id="" class="">4</button>
+                <button id="" class="">5</button>
+                <button id="" class="">6</button>
+                <button id="" class="">-</button>
+            </div>
+            <div id="fourthLine">
+                <button id="" class="">1</button>
+                <button id="" class="">2</button>
+                <button id="" class="">3</button>
+                <button id="" class="">+</button>
+            </div>
+            <div id="lastLine">
+                <button id="" class="">0</button>
+                <button id="" class="">.</button>
+                <button id="" class="">=</button>
+            </div>
+        </div>
     </body>
 </html>
