--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
         <div id="calcularor" class="calculator">
             <div id="scream" class="scream"></div>
             <div id="firstLine">
-                <button id="" class="">C</button>
-                <button id="" class="">⟵</button>
-                <button id="" class="">/</button>
+                <button id="clear" class="clear">C</button>
+                <button id="delete" class="delete">⟵</button>
+                <button id="divide" class="operator">/</button>
             </div>
             <div id="secondLine">
-                <button id="" class="">7</button>
-                <button id="" class="">8</button>
-                <button id="" class="">9</button>
-                <button id="" class="">*</button>
+                <button id="seven">7</button>
+                <button id="eight">8</button>
+                <button id="nine">9</button>
+                <button id="multuply" class="operator">*</button>
             </div>
             <div id="thirdLine">
-                <button id="" class="">4</button>
-                <button id="" class="">5</button>
-                <button id="" class="">6</button>
-                <button id="" class="">-</button>
+                <button id="four">4</button>
+                <button id="five">5</button>
+                <button id="six">6</button>
+                <button id="subtract" class="operator">-</button>
             </div>
             <div id="fourthLine">
-                <button id="" class="">1</button>
-                <button id="" class="">2</button>
-                <button id="" class="">3</button>
-                <button id="" class="">+</button>
+                <button id="one">1</button>
+                <button id="two">2</button>
+                <button id="three">3</button>
+                <button id="add" class="operator">+</button>
             </div>
             <div id="lastLine">
-                <button id="" class="">0</button>
-                <button id="" class="">.</button>
-                <button id="" class="">=</button>
+                <button id="zero">0</button>
+                <button id="dot">.</button>
+                <button id="equal" class="equak">=</button>
             </div>
         </div>
     </body>
