create the calculator display

--- a/index.html
+++ b/index.html
@@ -7,36 +7,38 @@
         <script src="" defer></script>
     </head>
     <body>
+        <h1>Calculator</h1>
         <div id="calcularor" class="calculator">
             <div id="scream" class="scream"></div>
             <div id="firstLine">
-                <button id="clear" class="clear">C</button>
-                <button id="delete" class="delete">⟵</button>
-                <button id="divide" class="operator">/</button>
+                <button id="clear" class="clear">Clear</button>
+                <button id="delete" class="delete">Delete</button>
             </div>
             <div id="secondLine">
                 <button id="seven">7</button>
                 <button id="eight">8</button>
                 <button id="nine">9</button>
-                <button id="multuply" class="operator">*</button>
+                <button id="divide" class="operator">÷</button>
             </div>
             <div id="thirdLine">
                 <button id="four">4</button>
                 <button id="five">5</button>
                 <button id="six">6</button>
-                <button id="subtract" class="operator">-</button>
+                <button id="multuply" class="operator">x</button>
             </div>
             <div id="fourthLine">
                 <button id="one">1</button>
                 <button id="two">2</button>
                 <button id="three">3</button>
-                <button id="add" class="operator">+</button>
+                <button id="subtract" class="operator">-</button>
             </div>
             <div id="lastLine">
-                <button id="zero">0</button>
                 <button id="dot">.</button>
+                <button id="zero">0</button>
                 <button id="equal" class="equak">=</button>
+                <button id="add" class="operator">+</button>
             </div>
         </div>
+        <footer>Copyright &copy; João Vitor de Oliveira</footer>
     </body>
 </html>
