--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Calculator</title>
         <link rel="stylesheet" href="/style.css">
-        <script src="" defer></script>
+        <script src="script.js" defer></script>
     </head>
     <body>
         <h1>Calculator</h1>
