create the four basic math operation functions

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <button id="seven">7</button>
                 <button id="eight">8</button>
                 <button id="nine">9</button>
-                <button id="divide" class="operator">÷</button>
+                <button id="divide" class="operator">/</button>
             </div>
             <div id="thirdLine">
                 <button id="four">4</button>
                 <button id="five">5</button>
                 <button id="six">6</button>
-                <button id="multuply" class="operator">x</button>
+                <button id="multuply" class="operator">*</button>
             </div>
             <div id="fourthLine">
                 <button id="one">1</button>
