--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
                 <button id="delete" class="delete">Delete</button>
             </div>
             <div id="secondLine">
-                <button id="seven">7</button>
-                <button id="eight">8</button>
-                <button id="nine">9</button>
+                <button id="seven" class="number">7</button>
+                <button id="eight" class="number">8</button>
+                <button id="nine" class="number">9</button>
                 <button id="divide" class="operator">/</button>
             </div>
             <div id="thirdLine">
-                <button id="four">4</button>
-                <button id="five">5</button>
-                <button id="six">6</button>
+                <button id="four" class="number">4</button>
+                <button id="five" class="number">5</button>
+                <button id="six" class="number">6</button>
                 <button id="multuply" class="operator">*</button>
             </div>
             <div id="fourthLine">
-                <button id="one">1</button>
-                <button id="two">2</button>
-                <button id="three">3</button>
+                <button id="one" class="number">1</button>
+                <button id="two" class="number">2</button>
+                <button id="three" class="number">3</button>
                 <button id="subtract" class="operator">-</button>
             </div>
             <div id="lastLine">
                 <button id="dot">.</button>
-                <button id="zero">0</button>
-                <button id="equal" class="equak">=</button>
+                <button id="zero" class="number">0</button>
+                <button id="equal" class="equal">=</button>
                 <button id="add" class="operator">+</button>
             </div>
         </div>
