create a eventlistener to put the result on the scream

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button id="four" class="number">4</button>
                 <button id="five" class="number">5</button>
                 <button id="six" class="number">6</button>
-                <button id="multuply" class="operator">*</button>
+                <button id="multiply" class="operator">*</button>
             </div>
             <div id="fourthLine">
                 <button id="one" class="number">1</button>
