--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Calculator</h1>
         <div id="calcularor" class="calculator">
-            <div id="scream" class="scream"></div>
+            <div id="screen" class="screen"></div>
             <div id="firstLine">
                 <button id="clear" class="clear">Clear</button>
                 <button id="delete" class="delete">Delete</button>
