--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Calculator</title>
         <link rel="stylesheet" href="/style.css">
         <script src="script.js" defer></script>
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     </head>
     <body>
         <h1>Calculator</h1>
@@ -39,6 +40,9 @@
                 <button id="add" class="operator">+</button>
             </div>
         </div>
-        <footer>Copyright &copy; João Vitor de Oliveira</footer>
+        <footer>Copyright &copy;
+            <a href="https://github.com/Jaoovit">João Vitor de Oliveira
+                <i class='fa fa-github'></i></a>
+        </footer>
     </body>
 </html>
