fix the footer position and add a x-icon

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
         <link rel="stylesheet" href="/style.css">
+        <link rel="icon" type="images/x-icon" href="/images/calculator.png">
         <script src="script.js" defer></script>
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     </head>
@@ -12,7 +14,7 @@
         <div id="calcularor" class="calculator">
             <div id="screen" class="screen"></div>
             <div id="firstLine">
-                <button id="clear" class="clear">Clear</button>
+                <button id="clear" class="clear">Clean</button>
                 <button id="delete" class="delete">Delete</button>
             </div>
             <div id="secondLine">
